--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,17 @@
 @import url("https://fonts.googleapis.com/css?family=Fira+Sans:300,500,600,700,800");
 @import "status-bar.css";
 @import "header.css";
+@import "nav-bar.css";
 
+* {
+  box-sizing: border-box;
+}
 body {
   background-color: white;
   padding: 10px 20px;
   color: #020202;
   font-family: "Fira Sans", sans-serif;
+  font-weight: 300;
 }
 a {
   color: inherit;
