--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   color: #020202;
   font-family: "Fira Sans", sans-serif;
   font-weight: 300;
+  height: 100000px;
 }
 a {
   color: inherit;
