--- a/css/friends.css
+++ b/css/friends.css
@@ -2,17 +2,59 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 20px;
 }
 .friends__title-column {
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: #8b8a8b;
+  padding-bottom: 12px;
 }
 .friend .friend__avatar {
   width: 50px;
-  border-radius: 37%;
+  border-radius: 35%;
 }
 .friend__avatar.g-avatar {
-  width: 50px;
+  width: 70px;
+}
+.friend__avatar.m-avatar {
+  width: 60px;
+}
+.friend .friend__column {
+  display: flex;
+  align-items: center;
+}
+.friend .friend__avatar {
+  margin-right: 15px;
+}
+.friend__content .friend__name {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 19px;
+  font-weight: 400;
+}
+.friend__bottom,
+.friend .chat__timestamp {
+  opacity: 0.5;
+  font-size: 12px;
+}
+.friend__bottom .friend__bottom-text {
+  font-size: 17px;
+}
+.friends__plus {
+  margin-bottom: 10px;
+  padding-top: 10px;
+  border-top: 1px solid #f7f4f7;
+  border-bottom: 1px solid #f7f4f7;
+}
+.friends__title-column i {
+  opacity: 0.3;
+}
+.friends__title {
+  font-size: 14px;
+}
+.friends__plus-find {
+  padding-top: 12px;
+  border-top: 1px solid #f7f4f7;
 }
