--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import "reset.css";
-@import url("https://fonts.googleapis.com/css?family=Fira+Sans:300,500,600,700,800");
+@import url("https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap");
 @import "status-bar.css";
 @import "header.css";
 @import "nav-bar.css";
@@ -12,10 +12,11 @@ body {
   background-color: white;
   padding: 10px 20px;
   color: #020202;
-  font-family: "Fira Sans", sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 300;
   height: 100000px;
 }
 a {
   color: inherit;
+  text-decoration: none;
 }
