--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import "find.css";
 @import "more.css";
 @import "settings.css";
+@import "chat.css";
 
 * {
   box-sizing: border-box;
@@ -17,7 +18,6 @@ body {
   color: #020202;
   font-family: "Rubik", sans-serif;
   font-weight: 300;
-  height: 100000px;
 }
 a {
   color: inherit;
