--- a/css/chat.css
+++ b/css/chat.css
@@ -47,10 +47,11 @@
 }
 .chat .chat__messages {
   padding-top: 1px solid #f7f7f7;
-  padding-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 20px;
+  padding-top: 30px;
 }
 .chat__messages .chat__timestamp {
   background-color: white;
@@ -63,4 +64,59 @@
     rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
   text-transform: uppercase;
   color: #6d6b6d;
+}
+/*  message  */
+.message {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+}
+.message .message__content {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+.message__content .message__author {
+  padding-bottom: 5px;
+  font-weight: 600;
+  font-size: 14px;
+}
+.incoming-message {
+  align-self: flex-start;
+}
+.incoming-message img {
+  width: 50px;
+  border-radius: 15px;
+  margin-right: 15px;
+}
+.message .message__bubble,
+.sent-message .message__bubble {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  padding: 10px 20px;
+  border-radius: 20px;
+}
+.message__timestamp {
+  margin: 0px 13px;
+  color: #b2b0b2;
+  font-size: 14px;
+}
+.message .message__bubble {
+  border-top-left-radius: 0px;
+  background: linear-gradient(to left, #ffc3f0, #fdf784);
+}
+.sent-message .message__bubble {
+  border-top-right-radius: 0px;
+  background: linear-gradient(to right, #ffc3f0, #fdf784);
+}
+
+/* sent message */
+.sent-message {
+  display: flex;
+  align-self: flex-end;
+  align-items: center;
+  padding: 35px 0px 20px 0px;
+}
+.message__timestamp {
+  display: block;
 }
