--- a/css/chat.css
+++ b/css/chat.css
@@ -25,6 +25,12 @@
   box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
+
+.chat__write {
+  bottom: 0px;
+  width: 100%;
+  border-radius: 0;
+}
 .chat__write i {
   font-size: 22px;
 }
@@ -100,7 +106,8 @@
 }
 .message .message__bubble,
 .sent-message .message__bubble {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   padding: 10px 20px;
   border-radius: 20px;
 }
