--- a/css/chat.css
+++ b/css/chat.css
@@ -9,27 +9,49 @@
 }
 
 /*  chat wirte  */
-.chat__write {
+.chat__write-container {
   position: fixed;
-  bottom: 50px;
-  width: 80%;
+  /* bottom: 50px;
+  width: 80%; */
   margin: 0 auto;
-  left: 0;
-  right: 0;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #fcfcfc;
   padding: 0 20px;
-  border-radius: 40px;
+  /* border-radius: 40px;
   box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025); */
 }
 
 .chat__write {
   bottom: 0px;
   width: 100%;
   border-radius: 0;
+  padding: 15px 60px;
+  width: 100%;
+  border: none;
+  font-size: 14px;
+}
+.chat__icon-left {
+  position: absolute;
+}
+.chat__icon-right {
+  position: absolute;
+  right: 10px;
+}
+.chat__write:focus {
+  outline: none;
+}
+.chat__icon {
+  font-size: 18px;
+  transition: opacity 0.3s ease-in-out;
+}
+.chat__write:focus ~ .chat__icon {
+  opacity: 0;
 }
 .chat__write i {
   font-size: 22px;
