--- a/css/chat.css
+++ b/css/chat.css
@@ -11,8 +11,6 @@
 /*  chat wirte  */
 .chat__write-container {
   position: fixed;
-  /* bottom: 50px;
-  width: 80%; */
   margin: 0 auto;
   left: 0px;
   right: 0px;
@@ -20,14 +18,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fcfcfc;
-  padding: 0 20px;
-  /* border-radius: 40px;
-  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025); */
+  width: 100%;
 }
-
+.chat__icon-left {
+  position: absolute;
+  left: 10px;
+}
+.chat__icon-right {
+  position: absolute;
+  right: 10px;
+}
 .chat__write {
+  margin: 0 auto;
   bottom: 0px;
   width: 100%;
   border-radius: 0;
@@ -35,16 +37,16 @@
   width: 100%;
   border: none;
   font-size: 14px;
-}
-.chat__icon-left {
-  position: absolute;
-}
-.chat__icon-right {
-  position: absolute;
-  right: 10px;
+  transition: width 0.5s ease-in-out, border-radius 0.5s ease-in,
+    transform 0.5s ease-in-out;
 }
 .chat__write:focus {
   outline: none;
+  width: 80%;
+  transform: translateY(-40px);
+  border-radius: 40px;
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
 .chat__icon {
   font-size: 18px;
