add @keyframes in input

--- a/css/chat.css
+++ b/css/chat.css
@@ -28,6 +28,28 @@
   position: absolute;
   right: 10px;
 }
+@keyframes float {
+  0% {
+    box-shadow: 0 30px 60px 0px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  33% {
+    box-shadow: 0 30px 60px -10px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  66% {
+    box-shadow: 0 30px 60px -20px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  100% {
+    box-shadow: 0 30px 60px -10px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+}
 .chat__write {
   margin: 0 auto;
   bottom: 0px;
@@ -47,6 +69,7 @@
   border-radius: 40px;
   box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  animation: float 2s ease-in-out infinite forwards;
 }
 .chat__icon {
   font-size: 18px;
