--- a/css/chat.css
+++ b/css/chat.css
@@ -182,3 +182,31 @@
 .message__timestamp {
   display: block;
 }
+
+/*  Message animation */
+@keyframes incomingAnimation {
+  from {
+    opacity: 0;
+    transform: translateX(-200px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+.incoming-message {
+  animation: incomingAnimation 1s ease-out forwards;
+}
+@keyframes sentAnimation {
+  from {
+    opacity: 0;
+    transform: translateX(200px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+.sent-message {
+  animation: sentAnimation 1s ease-out forwards;
+}
