--- a/css/chat.css
+++ b/css/chat.css
@@ -146,10 +146,20 @@
 .incoming-message {
   align-self: flex-start;
 }
+@keyframes spin {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotate(1turn);
+  }
+}
+
 .incoming-message img {
   width: 50px;
-  border-radius: 15px;
+  border-radius: 25px;
   margin-right: 15px;
+  animation: spin 1s linear infinite;
 }
 .message .message__bubble,
 .sent-message .message__bubble {
