--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 @import "more.css";
 @import "settings.css";
 @import "chat.css";
+@import "mobile.css";
 
 * {
   box-sizing: border-box;
@@ -22,4 +23,16 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@keyframes fadeIn {
+  from {
+    transform: translateY(20px);
+  }
+  to {
+    transform: none;
+  }
+}
+main {
+  animation: fadeIn 0.8s ease-in-out;
 }
